# realtime-ml-system

./: .gitignore  README.md
docker-compose/: Makefile  docker-compose.yml  feature-pipeline.yml
services/dashboard/: .env  Makefile  pyproject.toml
services/dashboard/src/: Dashboard.py  backend.py  config.py
services/kafka_to_feature_store/: .env  Dockerfile  Makefile  Makefile.historical  Makefile.realtime  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_writer.py  main.py
services/trade_producer/: .env  Dockerfile  Makefile  Makefile.historical  Makefile.realtime  pyproject.toml
services/trade_producer/src/: KrakenMdSubscriber.py  MdProducer.py  RedPandaMdProducer.py  config.py
services/trade_producer/src/kraken_api/: KrakenHistoricalMdApi.py  KrakenHistoricalMdSubscriber.py  KrakenRealtimeMdSubscriber.py
services/trade_to_ohlc/: .env  Dockerfile  Makefile  Makefile.historical  Makefile.realtime  pyproject.toml
services/trade_to_ohlc/src/: .env  TradeToOhlc.py  config.py
