[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Abhinav <abhi74k@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.38.0"
hopsworks = "^3.7.0"
bokeh = "^ 2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
